--- a/index.html
+++ b/index.html
@@ -1,52 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="background" style="background-image: url('federico-respini-sYffw0LNr7s-unsplash.jpg');">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css"/>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./home.css">
     <title>First Christian Church of Elgin</title>
 </head>
 <body>
-    <header>
-        <div class="navigation">
-            <div class="logo">
-                <img id="logo" src="183036366_padded_logo.png">
-            </div>
-            <div>
+    <div >
+        <header>
+            <div class="navigation">
+                <div class="logo">
+                    <img id="logo" src="newlogo.png">
+                </div>
+                <div>
 
+                </div>
+                <div class="options">
+                    <a class="has-border" href="index.html">Home</a>
+                    <a class="has-border" href="overview.html">Overview</a>
+                    <a class="has-border" href="calender.html">Calender</a>
+                    <a class="has-border" href="mission.html">Mission</a>
+                    <a class="has-border" href="information.html">Information</a>
+                </div>
             </div>
-            <div class="options">
-                <a class="has-border" href="index.html">Home</a>
-                <a class="has-border" href="overview.html">Overview</a>
-                <a class="has-border" href="calender.html">Calender</a>
-                <a class="has-border" href="donate.html">Donate</a>
-                <a class="has-border" href="information.html">Information</a>
+        </header>
+        <main>
+            <div class="main">
+                <h1 class="h1home">WELCOME!</h1>
+                <h3>Please Join Us For Worship!</h3>
+                <button>Learn More</button>
             </div>
-        </div>
-    </header>
-    
-    <main>
-        <div class="praise">
-            <div class="title">
-                <h2 class="box"></h2>
-                <h2>Praise!</h2>
-                <h2 class="box"></h2>
-            </div>
-            <h3 class="text">Join us for Sunday School at 10:00am, followed by our Sunday Service at 11:00am.</h3>
-            <button class="infoButton">DETAILS</button>
-        </div>
-        <div class="acknowledge">
-            <h2>Acknowledge</h2>
-            <p class="text">Discover God's teachings and find a community within. Join us for uplifting worship and enriching learning.</p>
-            <button class="infoButton">Details</button>
-        </div>
-        <div class="commit">
-            <h2>Commit!</h2>
-            <h3 class="text">Sunday School: 10:00AM</h3>
-            <button class="infoButton">Details</button>
-        </div>
-
-    </main>
+        </main>
+    </div>
 </body>
 </html>
